tests/javacresults/op_duration_frac.txt
Intermediate.java:1: error: class, interface, or enum expected
State 0: shift to state 1
^
1 error
